# pyvarium

./: .gitignore  404.html  README.md  gen_ref_pages.py  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/: Dockerfile  build-test-image.yml
.github/workflows/: build-test-image.yml  docs.yml  publish.yml  tests.yml
docs/css/: mkdocstring.css
search/: search_index.json
src/pyvarium/: config.py  pyproject.py  settings.toml
src/pyvarium/cli/: __init__.py  add.py  config.py  install.py  modulegen.py  new.py  setup.py  sync.py  verify.py
src/pyvarium/installers/: __init__.py  base.py  pipenv.py  poetry.py  python_venv.py  pyvarium.py  spack.py
src/pyvarium/util/: pyproject.py  python_venv.py
tests/: conftest.py  test_deployment_tool.py
tests/cli/: test_add.py  test_config.py  test_install.py  test_modulegen.py  test_new.py  test_sync.py  test_verify.py
tests/installers/: test_pipenv.py  test_poetry.py  test_pyvarium.py  test_spack.py
