[tool.coverage.paths]
source = ["src/pyvarium", "**/site-packages/pyvarium"]

[tool.coverage.run]
omit = [".nox"]

[tool.poetry]
name = "pyvarium"
version = "0.1.0"
description = ""
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
dynaconf = "^3.1.4"
fastcore = "^1.3.26"
loguru = "^0.5.3"
poetry-core = "^1.0.3"
pyaml = "^21.8.3"
python-box = "^5.4.1"
rich = "^10.7.0"
typer = {extras = ["all"], version = "^0.6.1"}
tomlkit = "^0.7.2"
Jinja2 = "^3.0.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
coverage = {extras = ["toml"], version = "^5.5"}
darglint = "^1.8.0"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
mkdocs = "^1.2.2"
mypy = "^0.910"
nox = "^2021.6.12"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
typeguard = "^2.12.1"
xdoctest = "^0.15.8"

[tool.poetry.scripts]
pyvarium = "pyvarium.cli:app"

[tool.pytest.ini_options]
addopts = "-s --color yes --verbose --cov=pyvarium --cov-report=xml --cov-report=term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
