[tool.coverage.paths]
source = ["src/pyvarium", "**/site-packages/pyvarium"]

[tool.coverage.run]
omit = [".nox"]

[tool.poetry]
name = "pyvarium"
version = "0.1.0"
description = ""
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
Jinja2 = "^3.0.3"
dynaconf = "^3.1.4"
fastcore = "^1.3.26"
loguru = "^0.5.3"
poetry-core = "^1.0.3"
pyaml = "^21.8.3"
pydantic = "^1.9.1"
python-box = "^5.4.1"
rich = "^10.7.0"
rtoml = "^0.8.0"
toml = "^0.10.2"
tomlkit = "^0.7.2"
typer = { extras = ["all"], version = "^0.6.1"}
black = { version = "^21.9b0", optional = true }
darglint = { version = "^1.8.0", optional = true }
flake8 = { version = "^3.9.2", optional = true }
flake8-annotations = { version = "^2.6.2", optional = true }
flake8-docstrings = { version = "^1.6.0", optional = true }
coverage = { extras = ["toml"], version = "^5.5", optional = true }
mypy = { version = "^0.910", optional = true }
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "^2.12.1", optional = true }
pytest-xdist = {version = "^2.5.0", optional = true}
typeguard = { version = "^2.12.1", optional = true }
xdoctest = { version = "^0.15.8", optional = true }
mkdocs = { version = "^1.2.2", optional = true }

[tool.poetry.extras]
lint = ["black", "mypy", "flake8", "isort", "darglint"]
test = ["coverage", "pytest", "pytest-cov", "pytest-xdist", "typeguard", "xdoctest"]
docs = ["mkdocs"]

[tool.poetry.scripts]
pyvarium = "pyvarium.cli:app"

[tool.pytest.ini_options]
addopts = "-s --color yes --verbose --cov=pyvarium --cov-report=xml --cov-report=term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
