[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyvarium"
version = "0.1.1"
description = "Tool for managing mixed Spack and pip packages"
readme = "README.md"
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
Jinja2 = "^3.0.3"
dynaconf = "^3.1.4"
loguru = "^0.5.3"
pyaml = "^21.8.3"
pydantic = "^1.9.1"
rich = "^10.7.0"
rtoml = "^0.8.0"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.5.0"
typeguard = "^2.12.1"
xdoctest = "^0.15.8"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^21.9b0"
darglint = "^1.8.0"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
coverage = { extras = ["toml"], version = "^5.5" }
mypy = "^0.910"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.2.2"
mkdocs-material = "^8.5.10"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mdx-include = "^1.4.2"
mkdocs-section-index = "^0.3.4"

[tool.poetry.scripts]
pyvarium = "pyvarium.cli:app"

[tool.pytest.ini_options]
addopts = "-s --color yes --verbose --cov=pyvarium --cov-report=xml --cov-report=term"

[tool.coverage.paths]
source = ["src/pyvarium", "**/site-packages/pyvarium"]
